--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,7 @@
 [core]
-    remote = myremote
-['remote "myremote"']
-    url = gdrive://0ADzGdrBA8vFtUk9PVA
+    remote = gdrive_remote
+    autostage = true
+['remote "gdrive_remote"']
+    url = gdrive://1E2_GpdXfamNKQDt7j3BmAYe0h3XeGMUW
+    gdrive_use_service_account = true
+    gdrive_acknowledge_abuse = true
